--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -5,5 +5,7 @@
 <% if user_signed_in? %>
   <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
 <% else %>
+  <%= link_to 'Sign in with email', new_user_session_path %>
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+  <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
 <% end %>
