--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -8,4 +8,5 @@
   <%= link_to 'Sign in with email', new_user_session_path %>
   <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
   <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
+  <%= link_to "Sign in with Vkontakte", user_omniauth_authorize_path(:vkontakte) %>
 <% end %>
