--- a/app/views/clinics/_form.html.erb
+++ b/app/views/clinics/_form.html.erb
@@ -1,23 +1,13 @@
-<%= simple_form_for @clinic, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :status %>
-  <%= f.input :user_id %>
-  <%= f.input :published %>
-  <%= f.input :rating %>
+<%= simple_form_for @clinic, :html => {:class => 'form-horizontal'} do |f| %>
   <%= f.input :full_name %>
-  <%= f.input :last_name %>
-  <%= f.input :type %>
-  <%= f.input :education %>
-  <%= f.input :starting_work %>
-  <%= f.input :high_school_name %>
-  <%= f.input :high_school_finished %>
+  <%= f.input :specialty %>
+  <%= f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @clinic.starting_work} %>
   <%= f.input :awards %>
-  <%= f.input :visit_home %>
   <%= f.input :price %>
+  <%= f.input :description %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                clinics_path, :class => 'btn' %>
+                root_path, :class => 'btn' %>
   </div>
 <% end %>
