--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -1,51 +1,86 @@
 <%- model_class = Clinic -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <div class="row">
+    <div class="span2">
+      <h4><%= @clinic.full_name %></h4>
+    </div>
+    <div class="span7">
+      <h4><%= @clinic.specialty %></h4>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="span2">
+    <table class="table table-condensed">
+      <tr>
+        <td> <%= image_tag @clinic.photos.try(:first).url(:thumb) %></td>
+      </tr>
+      <tr>
+        <td>
+          <%= rating_box(@clinic.rating) %>
+        </td>
+      </tr>
+      <tr>
+        <td><span id="<%= @clinic.id %>"><%= render partial: 'likes/like_block', locals: {likeable: @clinic} %></span>
+        </td>
+      </tr>
+    </table>
+  </div>
+  <div class="span7">
+    <dl class="dl-horizontal pull-left">
+      <dt><strong><%= model_class.human_attribute_name(:high_school_name) %>:</strong></dt>
+      <dd><%= @clinic.high_school_name %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:education) %>:</strong></dt>
+      <dd><%= @clinic.education %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:specialty) %>:</strong></dt>
+      <dd><%= @clinic.specialty %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:high_school_finished) %>:</strong></dt>
+      <dd><%= @clinic.high_school_finished %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:starting_work) %>:</strong></dt>
+      <dd><%= @clinic.starting_work %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:awards) %>:</strong></dt>
+      <dd><%= @clinic.awards %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:visit_home) %>:</strong></dt>
+      <dd><%= @clinic.visit_home %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
+      <dd><%= @clinic.price %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+      <dd><%= @clinic.description %></dd>
+    </dl>
+  </div>
+</div>
+<div class="row">
+  <% if user_signed_in? %>
+    <% if @clinic.can_user_comment?(current_user.id) %>
+      <h4>Добавить <%= link_to("комментарий", '#new_comment_window', data: {toggle: "modal"}) %></h4>
+    <% end %>
+  <% else %>
+    <h4>Только зарегистрированные пользователи могут оставлять комментарии.
+      Пожалуйста <%= link_to 'войдите', new_user_session_path %> </h4>
+  <% end %>
+</div>
+<div class="row">
+  <h3>Комментарии</h3>
+</div>
+<div class="row">
+  <%= render @comments %>
 </div>
 
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @clinic.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @clinic.description %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
-  <dd><%= @clinic.status %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @clinic.user_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:published) %>:</strong></dt>
-  <dd><%= @clinic.published %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:rating) %>:</strong></dt>
-  <dd><%= @clinic.rating %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:full_name) %>:</strong></dt>
-  <dd><%= @clinic.full_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:last_name) %>:</strong></dt>
-  <dd><%= @clinic.last_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:type) %>:</strong></dt>
-  <dd><%= @clinic.type %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:education) %>:</strong></dt>
-  <dd><%= @clinic.education %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:starting_work) %>:</strong></dt>
-  <dd><%= @clinic.starting_work %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:high_school_name) %>:</strong></dt>
-  <dd><%= @clinic.high_school_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:high_school_finished) %>:</strong></dt>
-  <dd><%= @clinic.high_school_finished %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:awards) %>:</strong></dt>
-  <dd><%= @clinic.awards %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:visit_home) %>:</strong></dt>
-  <dd><%= @clinic.visit_home %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
-  <dd><%= @clinic.price %></dd>
-</dl>
+<nav class="pagination">
+<%= paginate @comments %>
+</nav>
 
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              clinics_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_clinic_path(@clinic), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              clinic_path(@clinic),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
+<div id="new_comment_window" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h4 id="myModalLabel">Оставьте пожалуйста свой комментарий</h4>
+  </div>
+  <%= render partial: 'comments/form', locals: {commentable: @clinic} if user_signed_in?%>
 </div>
+
+<% if can? :edit, @clinic %>
+  <div class="form-actions">
+    <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                edit_clinic_path(@clinic), :class => 'btn' %>
+  </div>
+<% end %>
