--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,17 +1,23 @@
-<%= form_for(@comment) do |f| %>
-  <% if @comment.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+<%= simple_form_for [commentable, @comment], :html => {:class => 'form-horizontal'} do |f| %>
+  <div class="control-group string optional">
+    <label class="string optional control-label">Your Rating: </label>
 
-      <ul>
-      <% @comment.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+    <div class="controls">
+      <div class="rating" id="comment_rating"></div>
+      <div id='hint'></div>
     </div>
-  <% end %>
+  </div>
+  <%= f.input :message %>
+  <div class="control-group string optional">
+    <label id="length-label" class="string optional control-label"></label>
+    <div class="controls">
+      <label id="length" class="string optional"></label>
+    </div>
+  </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.button :submit, :class => 'btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                "", :class => 'btn' %>
   </div>
 <% end %>
