--- a/app/views/likes/_like_block.html.erb
+++ b/app/views/likes/_like_block.html.erb
@@ -2,5 +2,5 @@
 <% if likeable.liked_by_user?(current_user) %>
  <%= content_tag(:span, ' ' + pluralize(likeable.likes.count, 'like'), class: 'icon-heart') %>
 <% else %>
-  <%= link_to content_tag(:span, ' ' + pluralize(likeable.likes.count, 'like'), class: 'icon-heart'), permalink, method: :post, remote: true %>
+  <%= link_to content_tag(:span, ' ' + pluralize(likeable.likes.count, 'like'), class: 'icon-heart like'), permalink, method: :post, remote: true, class: 'like'  %>
 <% end %>
