Кнопки соцсетей, tooltips

--- a/app/views/admin/doctors/_address_fields.html.erb
+++ b/app/views/admin/doctors/_address_fields.html.erb
@@ -12,6 +12,6 @@
     <%= f.input :email %>
   </td>
   <td style="width:100px;">
-    <%= f.link_to_remove "Remove", :class => 'btn btn-danger' %>
+    <%= f.link_to_remove t("helpers.links.remove"), :class => 'btn btn-danger' %>
   </td>
 </tr>
