--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -7,7 +7,7 @@
       <div id='hint'></div>
     </div>
   </div>
-  <%= f.input :message %>
+  <%= f.input :message, as: :text %>
   <div class="control-group string optional">
     <label id="length-label" class="string optional control-label"></label>
     <div class="controls">
