--- a/app/views/admin/doctors/_clinic_category_relation_fields.html.erb
+++ b/app/views/admin/doctors/_clinic_category_relation_fields.html.erb
@@ -3,6 +3,6 @@
     <%= f.input :category_id, collection: Category.sorted.to_a %>
   </td>
   <td style="width:100px;">
-    <%= f.link_to_remove "Remove", :class => 'btn btn-danger' %>
+    <%= f.link_to_remove t("helpers.links.remove"), :class => 'btn btn-danger' %>
   </td>
 </tr>
