--- a/app/views/admin/doctors/_photo_fields.html.erb
+++ b/app/views/admin/doctors/_photo_fields.html.erb
@@ -7,6 +7,6 @@
     <%= f.input :image %>
   </td>
   <td style="width:100px;">
-    <%= f.link_to_remove "Remove", :class => 'btn btn-danger' %>
+    <%= f.link_to_remove t("helpers.links.remove"), :class => 'btn btn-danger' %>
   </td>
 </tr>
