--- a/app/views/admin/clinics/_form.html.erb
+++ b/app/views/admin/clinics/_form.html.erb
@@ -1,23 +1,45 @@
-<%= simple_form_for @clinic, :html => { :class => 'form-horizontal' } do |f| %>
-  <%= f.input :name %>
+<%= simple_nested_form_for [:admin, @clinic], :html => {:class => 'form-horizontal'} do |f| %>
+  <%= f.input :full_name %>
   <%= f.input :description %>
-  <%= f.input :status %>
+  <%= f.input :specialty %>
   <%= f.input :user_id %>
   <%= f.input :published %>
   <%= f.input :rating %>
-  <%= f.input :full_name %>
-  <%= f.input :last_name %>
-  <%= f.input :type %>
-  <%= f.input :education %>
-  <%= f.input :starting_work %>
-  <%= f.input :high_school_name %>
-  <%= f.input :high_school_finished %>
+  <%= f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @clinic.starting_work} %>
   <%= f.input :awards %>
   <%= f.input :visit_home %>
   <%= f.input :price %>
+  <h4>Категории</h4>
+  <table class="table table-striped">
+    <%= f.fields_for :clinic_category_relations, wrapper: false %>
+    <tr>
+      <td colspan="3">
+        <%= f.link_to_add "Добавить", :clinic_category_relations %>
+      </td>
+    </tr>
+  </table>
+  <h4>Адреса</h4>
+  <table class="table table-striped">
+    <%= f.fields_for :addresses, wrapper: false %>
+    <tr>
+      <td colspan="3">
+        <%= f.link_to_add "Добавить", :addresses %>
+      </td>
+    </tr>
+  </table>
+  <h4>Фотографии</h4>
+  <table class="table table-striped">
+    <%= f.fields_for :photos, wrapper: false %>
+    <tr>
+      <td colspan="3">
+        <%= f.link_to_add "Добавить", :photos %>
+      </td>
+    </tr>
+  </table>
+
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                clinics_path, :class => 'btn' %>
+                admin_clinics_path, :class => 'btn' %>
   </div>
 <% end %>
