--- a/app/views/admin/clinics/index.html.erb
+++ b/app/views/admin/clinics/index.html.erb
@@ -6,21 +6,12 @@
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:name) %></th>
-      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%= model_class.human_attribute_name(:full_name) %></th>
       <th><%= model_class.human_attribute_name(:status) %></th>
       <th><%= model_class.human_attribute_name(:user_id) %></th>
       <th><%= model_class.human_attribute_name(:published) %></th>
       <th><%= model_class.human_attribute_name(:rating) %></th>
-      <th><%= model_class.human_attribute_name(:full_name) %></th>
-      <th><%= model_class.human_attribute_name(:last_name) %></th>
-      <th><%= model_class.human_attribute_name(:type) %></th>
-      <th><%= model_class.human_attribute_name(:education) %></th>
       <th><%= model_class.human_attribute_name(:starting_work) %></th>
-      <th><%= model_class.human_attribute_name(:high_school_name) %></th>
-      <th><%= model_class.human_attribute_name(:high_school_finished) %></th>
-      <th><%= model_class.human_attribute_name(:awards) %></th>
-      <th><%= model_class.human_attribute_name(:visit_home) %></th>
       <th><%= model_class.human_attribute_name(:price) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
@@ -29,29 +20,20 @@
   <tbody>
     <% @clinics.each do |clinic| %>
       <tr>
-        <td><%= link_to clinic.id, clinic_path(clinic) %></td>
-        <td><%= clinic.name %></td>
-        <td><%= clinic.description %></td>
+        <td><%= link_to clinic.id, admin_clinic_path(clinic) %></td>
+        <td><%= clinic.full_name %></td>
         <td><%= clinic.status %></td>
         <td><%= clinic.user_id %></td>
         <td><%= clinic.published %></td>
         <td><%= clinic.rating %></td>
-        <td><%= clinic.full_name %></td>
-        <td><%= clinic.last_name %></td>
-        <td><%= clinic.type %></td>
-        <td><%= clinic.education %></td>
         <td><%= clinic.starting_work %></td>
-        <td><%= clinic.high_school_name %></td>
-        <td><%= clinic.high_school_finished %></td>
-        <td><%= clinic.awards %></td>
-        <td><%= clinic.visit_home %></td>
         <td><%= clinic.price %></td>
         <td><%=l clinic.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_clinic_path(clinic), :class => 'btn btn-mini' %>
+                      edit_admin_clinic_path(clinic), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      clinic_path(clinic),
+                      admin_clinic_path(clinic),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -62,5 +44,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_clinic_path,
+            new_admin_clinic_path,
             :class => 'btn btn-primary' %>
