--- a/app/views/admin/clinics/show.html.erb
+++ b/app/views/admin/clinics/show.html.erb
@@ -1,51 +1,49 @@
 <%- model_class = Clinic -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <h1><%= t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
-
-<dl class="dl-horizontal">
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @clinic.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @clinic.description %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
-  <dd><%= @clinic.status %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @clinic.user_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:published) %>:</strong></dt>
-  <dd><%= @clinic.published %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:rating) %>:</strong></dt>
-  <dd><%= @clinic.rating %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:full_name) %>:</strong></dt>
-  <dd><%= @clinic.full_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:last_name) %>:</strong></dt>
-  <dd><%= @clinic.last_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:type) %>:</strong></dt>
-  <dd><%= @clinic.type %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:education) %>:</strong></dt>
-  <dd><%= @clinic.education %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:starting_work) %>:</strong></dt>
-  <dd><%= @clinic.starting_work %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:high_school_name) %>:</strong></dt>
-  <dd><%= @clinic.high_school_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:high_school_finished) %>:</strong></dt>
-  <dd><%= @clinic.high_school_finished %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:awards) %>:</strong></dt>
-  <dd><%= @clinic.awards %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:visit_home) %>:</strong></dt>
-  <dd><%= @clinic.visit_home %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
-  <dd><%= @clinic.price %></dd>
-</dl>
+<div class="row-fluid">
+  <div class="span7">
+    <dl class="dl-horizontal">
+      <dt><strong><%= model_class.human_attribute_name(:full_name) %>:</strong></dt>
+      <dd><%= @clinic.full_name %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+      <dd><%= @clinic.description %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
+      <dd><%= @clinic.status %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+      <dd><%= @clinic.user_id %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:published) %>:</strong></dt>
+      <dd><%= @clinic.published %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:rating) %>:</strong></dt>
+      <dd><%= @clinic.rating %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:starting_work) %>:</strong></dt>
+      <dd><%= @clinic.starting_work %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:awards) %>:</strong></dt>
+      <dd><%= @clinic.awards %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:visit_home) %>:</strong></dt>
+      <dd><%= @clinic.visit_home %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
+      <dd><%= @clinic.price %></dd>
+      <% @clinic.addresses.each do |address| %>
+        <dt><strong>Адрес:</strong></dt>
+        <dd><%= address.city_address %> <%= address.street_address %></dd>
+      <% end %>
+    </dl>
+  </div>
+  <div class="span2 pull-right">
+    <%= image_tag @clinic.photos.try(:first).url(:thumb) %>
+  </div>
+</div>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              clinics_path, :class => 'btn'  %>
+              admin_clinics_path, :class => 'btn' %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_clinic_path(@clinic), :class => 'btn' %>
+              edit_admin_clinic_path(@clinic), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              clinic_path(@clinic),
+              admin_clinic_path(@clinic),
               :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
               :class => 'btn btn-danger' %>
 </div>
