--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,6 +1,4 @@
 <%- model_class = Doctor -%>
-<%= content_for :title, @doctor.title_info %>
-
 <div class="page-header">
   <div class="row">
     <div class="span2">
@@ -40,14 +38,10 @@
   </div>
   <div class="span7">
     <dl class="dl-horizontal pull-left">
-      <dt><strong><%= model_class.human_attribute_name(:high_school_name) %>:</strong></dt>
-      <dd><%= @doctor.high_school_name %></dd>
-      <dt><strong><%= model_class.human_attribute_name(:education) %>:</strong></dt>
-      <dd><%= @doctor.education %></dd>
-      <dt><strong><%= model_class.human_attribute_name(:specialty) %>:</strong></dt>
-      <dd><%= @doctor.specialty %></dd>
-      <dt><strong><%= model_class.human_attribute_name(:high_school_finished) %>:</strong></dt>
-      <dd><%= @doctor.high_school_finished %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:city) %>:</strong></dt>
+      <dd><%= @doctor.addresses.first.city %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:address) %>:</strong></dt>
+      <dd><%= @doctor.addresses.first.address_1 %></dd>
       <dt><strong><%= model_class.human_attribute_name(:starting_work) %>:</strong></dt>
       <dd><%= @doctor.starting_work %></dd>
       <dt><strong><%= model_class.human_attribute_name(:awards) %>:</strong></dt>
@@ -58,6 +52,10 @@
       <dd><%= @doctor.price %></dd>
       <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
       <dd><%= @doctor.description %></dd>
+      <% @doctor.addresses.each do |address| %>
+        <dt><strong>Адрес:</strong></dt>
+        <dd><%= address.city_address %> <%= address.street_address %></dd>
+      <% end %>
     </dl>
   </div>
 </div>
@@ -67,18 +65,19 @@
       <h4>Добавить <%= link_to("комментарий", '#new_comment_window', data: {toggle: "modal"}) %></h4>
     <% end %>
   <% else %>
-    <%= render partial: 'layouts/auth_links' %>
+    <h4>Только зарегистрированные пользователи могут оставлять комментарии.
+      Пожалуйста <%= link_to 'войдите', new_user_session_path %> </h4>
   <% end %>
 </div>
 <div class="row">
   <h3>Комментарии</h3>
 </div>
 <div class="row">
-  <%= render @comments %>
+  <%= render @comments unless @comments.nil? %>
 </div>
 
 <nav class="pagination">
-  <%= paginate @comments %>
+  <%= paginate @comments unless @comments.nil? %>
 </nav>
 
 <div id="new_comment_window" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
