авторизация для production

--- a/app/views/layouts/_auth_links.html.erb
+++ b/app/views/layouts/_auth_links.html.erb
@@ -1,4 +1,4 @@
-<h5 class="tooltip-demo">Только зарегистрированные пользователи могут оставлять комментарии. Войти через </h5>
+<h5 class="tooltip-demo">Войти через </h5>
 <div class="row-fluid">
   <div class="span5 offset4">
     <ul class="nav nav-pills">
