--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -1,4 +1,5 @@
 <%- model_class = Clinic -%>
+<%= content_for(:title, @clinic.full_name) %>
 <div class="page-header">
   <div class="row">
     <div class="span2">
@@ -30,7 +31,7 @@
           <div class="yashare-auto-init" data-yashareL10n="ru"
                data-yashareType="none"
                data-yashareQuickServices="facebook,vkontakte,twitter,gplus,odnoklassniki"
-               data-yashareDescription='Советуем доктора!'>
+               data-yashareDescription='Советуем клинику!'>
           </div>
         </td>
       </tr>
@@ -61,6 +62,7 @@
       <h4>Добавить <%= link_to("комментарий", '#new_comment_window', data: {toggle: "modal"}) %></h4>
     <% end %>
   <% else %>
+    <h5>Только зарегистрированные пользователи могут оставлять комментарии.</h5>
     <%= render :partial => 'layouts/auth_links' %>
   <% end %>
 </div>
