--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,4 +1,5 @@
 <%- model_class = Doctor -%>
+<%= content_for(:title, @doctor.full_name) %>
 <div class="page-header">
   <div class="row">
     <div class="span2">
@@ -65,6 +66,7 @@
       <h4>Добавить <%= link_to("комментарий", '#new_comment_window', data: {toggle: "modal"}) %></h4>
     <% end %>
   <% else %>
+    <h5>Только зарегистрированные пользователи могут оставлять комментарии.</h5>
     <%= render :partial => 'layouts/auth_links' %>
   <% end %>
 </div>
