--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span4">
-        <p>© 2013 · Днепропетровск · Украина</p>
+        <p>© 2013 · Украина</p>
       </div>
       <div class="span4">
         <ul>
