--- a/app/views/layouts/admin_layout.html.erb
+++ b/app/views/layouts/admin_layout.html.erb
@@ -39,7 +39,7 @@
   <div class="container">
     <div class="navbar-wrapper">
       <div class="navbar navbar-fixed-top">
-        <%= render :partial => 'layouts/navbar' %>
+        <%= render :partial => 'layouts/admin_navbar' %>
       </div>
     </div>
 
@@ -64,11 +64,6 @@
   </div>
   <div id="push"></div>
 </div>
-
-<footer>
-  <%= render :partial => 'layouts/footer' %>
-</footer>
-
 
 <!-- Javascripts
 ================================================== -->
