--- a/app/views/admin/admin_users/index.html.erb
+++ b/app/views/admin/admin_users/index.html.erb
@@ -16,16 +16,16 @@
   <tbody>
     <% @admin_users.each do |admin_user| %>
       <tr>
-        <td><%= link_to admin_user.id, admin_user_path(admin_user) %></td>
+        <td><%= link_to admin_user.id, admin_admin_user_path(admin_user) %></td>
         <td><%= admin_user.email %></td>
         <td><%= admin_user.name %></td>
         <td><%= admin_user.last_name %></td>
         <td><%= admin_user.role.try(:name) %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_user_path(admin_user), :class => 'btn btn-mini' %>
+                      edit_admin_admin_user_path(admin_user), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      admin_user_path(admin_user),
+                      admin_admin_user_path(admin_user),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -36,5 +36,5 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_admin_user_path,
+            new_admin_admin_user_path,
             :class => 'btn btn-primary' %>
