--- a/app/views/admin/clinics/index.html.erb
+++ b/app/views/admin/clinics/index.html.erb
@@ -1,8 +1,11 @@
 <%- model_class = Clinic -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1><%=t '.title', :default => model_class.model_name.human(count: 2).titleize %></h1>
+  <%= search_form_for [:admin, @q] do |f| %>
+     <%= f.text_field :full_name_cont, placeholder: 'поиск по названию' %>
+  <% end %>
 </div>
-<table class="table table-striped">
+<table id="citems" class="table table-striped">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:id) %></th>
@@ -13,36 +16,18 @@
       <th><%= model_class.human_attribute_name(:rating) %></th>
       <th><%= model_class.human_attribute_name(:starting_work) %></th>
       <th><%= model_class.human_attribute_name(:price) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-  <tbody>
-    <% @clinics.each do |clinic| %>
-      <tr>
-        <td><%= link_to clinic.id, admin_clinic_path(clinic) %></td>
-        <td><%= clinic.full_name %></td>
-        <td><%= clinic.status %></td>
-        <td><%= clinic.user_id %></td>
-        <td><%= clinic.published %></td>
-        <td><%= clinic.rating %></td>
-        <td><%= clinic.starting_work %></td>
-        <td><%= clinic.price %></td>
-        <td><%=l clinic.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_clinic_path(clinic), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      admin_clinic_path(clinic),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
+  <tbody class="page">
+    <%= render :partial => 'result' %>
   </tbody>
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_admin_clinic_path,
             :class => 'btn btn-primary' %>
+
+<nav class="pagination" style="display: none;">
+<%= paginate @clinics, remote: true %>
+</nav>
