--- a/app/views/admin/doctors/_form.html.erb
+++ b/app/views/admin/doctors/_form.html.erb
@@ -1,9 +1,10 @@
 <%= simple_nested_form_for [:admin, @doctor], :html => {:class => 'form-horizontal'} do |f| %>
   <%= f.input :last_name %>
   <%= f.input :first_name %>
+  <%= f.input :gender, collection: Doctor::GENDER %>
   <%= f.input :description %>
   <%= f.input :specialty %>
-  <%= f.input :user_id %>
+  <%= f.input :user_id, collection: User.all.map{|u| [u.full_name, u.id]} %>
   <%= f.input :published %>
   <%= f.input :rating %>
   <%= f.input :education %>
