--- a/app/views/admin/doctors/index.html.erb
+++ b/app/views/admin/doctors/index.html.erb
@@ -1,50 +1,32 @@
 <%- model_class = Doctor -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+  <h1><%=t '.title', :default => model_class.model_name.human(count: 2).titleize %></h1>
+  <%= search_form_for [:admin, @q] do |f| %>
+     <%= f.text_field :last_name_cont, placeholder: 'поиск по фамилии' %>
+  <% end %>
 </div>
-<table class="table table-striped">
+<table id="ditems" class="table table-striped">
   <thead>
-    <tr>
+    <tr >
       <th><%= model_class.human_attribute_name(:id) %></th>
       <th><%= model_class.human_attribute_name(:full_name) %></th>
       <th><%= model_class.human_attribute_name(:status) %></th>
       <th><%= model_class.human_attribute_name(:user_id) %></th>
       <th><%= model_class.human_attribute_name(:published) %></th>
       <th><%= model_class.human_attribute_name(:rating) %></th>
-      <th><%= model_class.human_attribute_name(:starting_work) %></th>
-      <th><%= model_class.human_attribute_name(:visit_home) %></th>
-      <th><%= model_class.human_attribute_name(:price) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-  <tbody>
-    <% @doctors.each do |doctor| %>
-      <tr>
-        <td><%= link_to doctor.id, doctor_path(doctor) %></td>
-        <td><%= doctor.full_name %></td>
-        <td><%= doctor.status %></td>
-        <td><%= doctor.user_id %></td>
-        <td><%= doctor.published %></td>
-        <td><%= doctor.rating %></td>
-        <td><%= doctor.starting_work %></td>
-        <td><%= doctor.visit_home %></td>
-        <td><%= doctor.price %></td>
-        <td><%=l doctor.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_doctor_path(doctor), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      admin_doctor_path(doctor),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
+  <tbody class="page">
+    <%= render :partial => 'result' %>
   </tbody>
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_admin_doctor_path,
             :class => 'btn btn-primary' %>
+
+<nav class="pagination" style="display: none;">
+<%= paginate @doctors, remote: true %>
+</nav>
