--- a/app/views/admin/doctors/show.html.erb
+++ b/app/views/admin/doctors/show.html.erb
@@ -33,6 +33,8 @@
       <dd><%= @doctor.visit_home %></dd>
       <dt><strong><%= model_class.human_attribute_name(:price) %>:</strong></dt>
       <dd><%= @doctor.price %></dd>
+      <dt><strong><%= model_class.human_attribute_name(:gender) %>:</strong></dt>
+      <dd><%= @doctor.gender %></dd>
       <% @doctor.addresses.each do |address| %>
         <dt><strong>Адрес:</strong></dt>
         <dd><%= address.city_address %> <%= address.street_address %></dd>
