--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,12 +1,12 @@
-<%= simple_form_for @user, :html => { :class => 'form-horizontal' } do |f| %>
+<%= simple_form_for [:admin, @user], :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.input :email %>
   <%= f.input :password, :required => true %>
   <%= f.input :password_confirmation, :required => true %>
-  <%= f.input :name %>
+  <%= f.input :first_name %>
   <%= f.input :last_name %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                users_path, :class => 'btn' %>
+                admin_users_path, :class => 'btn' %>
   </div>
 <% end %>
