--- a/app/views/categories/show.js.erb
+++ b/app/views/categories/show.js.erb
@@ -1,1 +1,1 @@
-$("#items").append("<div class='page'><%= escape_javascript(render(@items)) %></tbody>");
+$("#items").append("<div class='page'><%= escape_javascript(render(@items)) %></div>");
