--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,11 +2,11 @@
   <%= f.input :email %>
   <%= f.input :password, :required => true %>
   <%= f.input :password_confirmation, :required => true %>
-  <%= f.input :name %>
+  <%= f.input :first_name %>
   <%= f.input :last_name %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                users_path, :class => 'btn' %>
+                root_path, :class => 'btn' %>
   </div>
 <% end %>
