--- a/app/views/admin/clinics/index.html.erb
+++ b/app/views/admin/clinics/index.html.erb
@@ -1,8 +1,9 @@
 <%- model_class = Clinic -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human(count: 2).titleize %></h1>
-  <%= search_form_for [:admin, @q] do |f| %>
-     <%= f.text_field :full_name_cont, placeholder: 'поиск по названию' %>
+  <%= search_form_for [:admin, @q], class: 'form-search' do |f| %>
+     <%= f.text_field :full_name_cont, class: 'search-query', placeholder: 'поиск по названию' %>
+    <%= f.button 'Найти', :class => 'btn search-query' %>
   <% end %>
 </div>
 <table id="citems" class="table table-striped">
