--- a/app/views/admin/clinics/_form.html.erb
+++ b/app/views/admin/clinics/_form.html.erb
@@ -8,6 +8,7 @@
   <%= f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @clinic.starting_work} %>
   <%= f.input :awards %>
   <%= f.input :visit_home %>
+  <%= f.input :pediatric %>
   <%= f.input :price %>
   <h4>Категории</h4>
   <table class="table table-striped">
