--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [commentable, @comment], :html => {:class => 'form-horizontal'} do |f| %>
   <div class="control-group string optional">
-    <label class="string optional control-label">Your Rating: </label>
+    <label class="string optional control-label">Ваша оценка: </label>
 
     <div class="controls">
       <div class="rating" id="comment_rating"></div>
