--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -10,6 +10,7 @@
   <%= f.input :visit_home %>
   <%= f.input :price %>
   <%= f.input :gender, collection: Doctor::GENDER %>
+  <%= f.input :pediatric %>
   <%= f.input :description %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
