--- a/app/views/admin/advises/_form.html.erb
+++ b/app/views/admin/advises/_form.html.erb
@@ -6,6 +6,7 @@
   <%= f.input :specialty %>
   <%= f.input :city %>
   <%= f.input :phone_number %>
+  <%= f.input :pediatric %>
   <%= f.input :description %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
