--- a/app/views/admin/doctors/_form.html.erb
+++ b/app/views/admin/doctors/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_nested_form_for [:admin, @doctor], :html => {:class => 'form-horizontal'} do |f| %>
   <%= f.input :last_name %>
   <%= f.input :first_name %>
+  <%= f.input :pediatric %>
   <%= f.input :gender, collection: Doctor::GENDER %>
   <%= f.input :description %>
   <%= f.input :specialty %>
