--- a/app/views/clinics/_form.html.erb
+++ b/app/views/clinics/_form.html.erb
@@ -4,6 +4,7 @@
   <%= f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @clinic.starting_work} %>
   <%= f.input :awards %>
   <%= f.input :price %>
+  <%= f.input :pediatric %>
   <%= f.input :description %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
