--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </a>
-    <%= link_to 'Советчик', root_path, class: 'brand' %>
+    <%= link_to 'Консультант', root_path, class: 'brand' %>
 
     <div class="container nav-collapse">
       <ul class="nav">
