--- a/app/views/layouts/_admin_navbar.html.erb
+++ b/app/views/layouts/_admin_navbar.html.erb
@@ -11,11 +11,12 @@
         <li><%= link_to "Доктора", admin_doctors_path %></li>
         <li><%= link_to "Клиники", admin_clinics_path %></li>
         <li><%= link_to "Юзеры", admin_users_path %></li>
-        <li><%= link_to "Рекомендации", admin_advises_path %></li>
+        <li><%= link_to "Заявки", admin_advises_path %></li>
         <li><%= link_to "Комментарии", admin_comments_path %></li>
         <li><%= link_to "Специальности", admin_categories_path %></li>
         <li><%= link_to "Страницы", admin_pages_path %></li>
         <li><%= link_to "Роли", admin_roles_path %></li>
+        <li><%= link_to "Адмиы", admin_admin_users_path %></li>
       </ul>
       <ul class="nav pull-right">
         <li>
