--- a/app/views/admin/advises/show.html.erb
+++ b/app/views/admin/advises/show.html.erb
@@ -1,39 +1,55 @@
 <%- model_class = Advise -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+  <h1><%= t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @advise.user_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:category_id) %>:</strong></dt>
-  <dd><%= @advise.category_id %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:last_name) %>:</strong></dt>
-  <dd><%= @advise.last_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
-  <dd><%= @advise.name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:full_name) %>:</strong></dt>
-  <dd><%= @advise.full_name %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:specialty) %>:</strong></dt>
-  <dd><%= @advise.specialty %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:city) %>:</strong></dt>
-  <dd><%= @advise.city %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:phone_number) %>:</strong></dt>
-  <dd><%= @advise.phone_number %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
-  <dd><%= @advise.description %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
-  <dd><%= @advise.status %></dd>
+  <dd><%= @advise.user.email %></dd>
+  <% if @advise.category_id.present? %>
+    <dt><strong><%= model_class.human_attribute_name(:category_id) %>:</strong></dt>
+    <dd><%= @advise.category.name %></dd>
+  <% end %>
+  <% if @advise.last_name.present? %>
+    <dt><strong><%= model_class.human_attribute_name(:last_name) %>:</strong></dt>
+    <dd><%= @advise.last_name %></dd>
+  <% end %>
+  <% if @advise.name.present? %>
+    <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+    <dd><%= @advise.name %></dd>
+  <% end %>
+  <% if @advise.full_name.present? %>
+    <dt><strong><%= model_class.human_attribute_name(:full_name) %>:</strong></dt>
+    <dd><%= @advise.full_name %></dd>
+  <% end %>
+  <% if @advise.specialty.present? %>
+    <dt><strong><%= model_class.human_attribute_name(:specialty) %>:</strong></dt>
+    <dd><%= @advise.specialty %></dd>
+  <% end %>
+  <% if @advise.city.present? %>
+    <dt><strong><%= model_class.human_attribute_name(:city) %>:</strong></dt>
+    <dd><%= @advise.city %></dd>
+  <% end %>
+  <% if @advise.phone_number.present? %>
+    <dt><strong><%= model_class.human_attribute_name(:phone_number) %>:</strong></dt>
+    <dd><%= @advise.phone_number %></dd>
+  <% end %>
+  <% if @advise.description.present? %>
+    <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
+    <dd><%= @advise.description %></dd>
+  <% end %>
+  <dt><strong><%= model_class.human_attribute_name(:processed) %>:</strong></dt>
+  <dd><%= @advise.processed %></dd>
 </dl>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              admin_advises_path, :class => 'btn'  %>
+              admin_advises_path, :class => 'btn' %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_admin_advise_path(@advise), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
               admin_advise_path(@advise),
               :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
               :class => 'btn btn-danger' %>
 </div>
