--- a/app/views/admin/clinics/_form.html.erb
+++ b/app/views/admin/clinics/_form.html.erb
@@ -1,21 +1,23 @@
 <%= simple_nested_form_for [:admin, @clinic], :html => {:class => 'form-horizontal'} do |f| %>
   <%= f.input :full_name %>
-  <%= f.input :description %>
+  <%= f.input :description, as: :text %>
   <%= f.input :specialty %>
   <%= f.input :user_id, collection: User.all.map{|u| [u.full_name, u.id]} %>
   <%= f.input :published %>
   <%= f.input :rating %>
   <%= f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @clinic.starting_work} %>
-  <%= f.input :awards %>
+  <%= f.input :awards, as: :text %>
   <%= f.input :visit_home %>
   <%= f.input :pediatric %>
   <%= f.input :price %>
+  <%= f.input :advise_id, as: :hidden %>
+
   <h4>Категории</h4>
   <table class="table table-striped">
     <%= f.fields_for :clinic_category_relations, wrapper: false %>
     <tr>
       <td colspan="3">
-        <%= f.link_to_add "Добавить", :clinic_category_relations %>
+        <%= f.link_to_add "Добавить категорию", :clinic_category_relations %>
       </td>
     </tr>
   </table>
@@ -24,7 +26,7 @@
     <%= f.fields_for :addresses, wrapper: false %>
     <tr>
       <td colspan="3">
-        <%= f.link_to_add "Добавить", :addresses %>
+        <%= f.link_to_add "Добавить адрес", :addresses %>
       </td>
     </tr>
   </table>
@@ -33,7 +35,7 @@
     <%= f.fields_for :photos, wrapper: false %>
     <tr>
       <td colspan="3">
-        <%= f.link_to_add "Добавить", :photos %>
+        <%= f.link_to_add "Добавить фото", :photos %>
       </td>
     </tr>
   </table>
