--- a/app/views/admin/doctors/_form.html.erb
+++ b/app/views/admin/doctors/_form.html.erb
@@ -3,7 +3,7 @@
   <%= f.input :first_name %>
   <%= f.input :pediatric %>
   <%= f.input :gender, collection: Doctor::GENDER %>
-  <%= f.input :description %>
+  <%= f.input :description, as: :text %>
   <%= f.input :specialty %>
   <%= f.input :user_id, collection: User.all.map{|u| [u.full_name, u.id]} %>
   <%= f.input :published %>
@@ -12,15 +12,16 @@
   <%= f.input :starting_work, as: :string, input_html: {class: 'datepicker', value: @doctor.high_school_finished} %>
   <%= f.input :high_school_name %>
   <%= f.input :high_school_finished, as: :string, input_html: {class: 'datepicker', value: @doctor.starting_work} %>
-  <%= f.input :awards %>
+  <%= f.input :awards, as: :text %>
   <%= f.input :visit_home %>
   <%= f.input :price %>
+  <%= f.input :advise_id, as: :hidden %>
   <h4>Категории</h4>
   <table class="table table-striped">
     <%= f.fields_for :doctor_category_relations, wrapper: false %>
     <tr>
       <td colspan="3">
-        <%= f.link_to_add "Добавить", :doctor_category_relations %>
+        <%= f.link_to_add "Добавить категорию", :doctor_category_relations %>
       </td>
     </tr>
   </table>
@@ -29,7 +30,7 @@
     <%= f.fields_for :addresses, wrapper: false %>
     <tr>
       <td colspan="3">
-        <%= f.link_to_add "Добавить", :addresses %>
+        <%= f.link_to_add "Добавить адрес", :addresses %>
       </td>
     </tr>
   </table>
@@ -38,7 +39,7 @@
     <%= f.fields_for :photos, wrapper: false %>
     <tr>
       <td colspan="3">
-        <%= f.link_to_add "Добавить", :photos %>
+        <%= f.link_to_add "Добавить фото", :photos %>
       </td>
     </tr>
   </table>
