--- a/app/views/admin/doctors/show.html.erb
+++ b/app/views/admin/doctors/show.html.erb
@@ -56,4 +56,6 @@
               :method => 'delete',
               :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
               :class => 'btn btn-danger' %>
+  <%= link_to 'Вернуться к заявкам',
+              admin_advises_path, :class => 'btn' %>
 </div>
