--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,11 +1,15 @@
 <%- model_class = User -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human(count: 2).titleize %></h1>
+  <h1><%= t '.title', :default => model_class.model_name.human(count: 2).titleize %></h1>
   <%= search_form_for [:admin, @q], class: 'form-search' do |f| %>
     <%= f.text_field :email_cont, class: 'search-query', placeholder: 'поиск по email' %>
     <%= f.text_field :last_name_cont, class: 'search-query', placeholder: 'поиск по фамилии' %>
     <%= f.button 'Найти', :class => 'btn search-query' %>
   <% end %>
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+              new_admin_user_path,
+              :class => 'btn btn-primary' %>
+
 </div>
 <table id="uitems" class="table table-striped">
   <thead>
