--- a/app/views/admin/doctors/show.html.erb
+++ b/app/views/admin/doctors/show.html.erb
@@ -42,7 +42,7 @@
     </dl>
   </div>
   <div class="span2 pull-right">
-    <%= image_tag @doctor.photos.try(:first).url(:thumb) %>
+    <%= image_tag @doctor.photourl %>
   </div>
 </div>
 
