--- a/app/views/clinics/show.html.erb
+++ b/app/views/clinics/show.html.erb
@@ -14,7 +14,7 @@
   <div class="span2">
     <table class="table table-condensed">
       <tr>
-        <td> <%= image_tag @clinic.photos.try(:first).url(:thumb) %></td>
+        <td> <%= image_tag @clinic.photourl %></td>
       </tr>
       <tr>
         <td>
