--- a/app/views/admin/advises/show.html.erb
+++ b/app/views/admin/advises/show.html.erb
@@ -52,4 +52,7 @@
               :method => 'delete',
               :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
               :class => 'btn btn-danger' %>
+  <%= link_to('Создать доктора', new_admin_advise_doctor_path(@advise), :class => 'btn') %>
+  <%= link_to('Создать клинику', new_admin_advise_clinic_path(@advise), :class => 'btn') %>
+
 </div>
