--- a/app/views/admin/clinics/show.html.erb
+++ b/app/views/admin/clinics/show.html.erb
@@ -32,7 +32,7 @@
     </dl>
   </div>
   <div class="span2 pull-right">
-    <%= image_tag @clinic.photos.try(:first).url(:thumb) %>
+    <%= image_tag @clinic.photourl %>
   </div>
 </div>
 
